--- a/restaurant.html
+++ b/restaurant.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-<meta charset="UTF-8">
+  <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
@@ -15,11 +15,13 @@
   <!-- Normalize.css for better cross-browser consistency -->
   <link rel="stylesheet" src="//normalize-css.googlecode.com/svn/trunk/normalize.css" />
   <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700" rel="stylesheet">
+
+  <link rel="dns-prefetch" href="http://localhost:1337">
   <!-- Main CSS file -->
   <link rel="stylesheet" href="css/styles.css" type="text/css">
-  <link rel="stylesheet" href="css/responsive.css">
-  
-  
+  <link rel="stylesheet" href="css/responsive.css" media="(min-width: 860px)">
+
+
   <title>Restaurant Info</title>
 </head>
 
@@ -28,17 +30,21 @@
   <header>
     <!-- Beginning nav -->
     <div id="head">
-      <h1><a href="/">Restaurant Reviews</a></h1>
+      <h1>
+        <a href="/">Restaurant Reviews</a>
+      </h1>
     </div>
     <!-- Beginning breadcrumb -->
     <div class="breadcrumbs-wrap">
       <nav id="breadcrumb" aria-label="Breadcrumb">
         <ul id="breadcrumb-list">
-          <li><a href="/">Home</a></li>
+          <li>
+            <a href="/">Home</a>
+          </li>
         </ul>
       </nav>
     </div>
-    
+
     <!-- End breadcrumb -->
     <!-- End nav -->
   </header>
@@ -51,7 +57,7 @@
     <section id="restaurant-container">
       <div class="restaurant-title">
         <h2 id="restaurant-name"></h2>
-        <p id="restaurant-cuisine"></p>      
+        <p id="restaurant-cuisine"></p>
       </div>
       <div class="restaurant-image">
         <img id="restaurant-img">
@@ -70,24 +76,77 @@
     <section id="reviews-container">
       <ul id="reviews-list"></ul>
     </section>
+    <hr>
+    <section id="review-form-wrap">
+      <h2>Leave a review</h2>
+      <form action="" method="POST" id="review-form">
+        <input type="hidden" name="restaurant_id" value="" id="restaurant-id-field">
+        <div class="row">
+          <div class="input-group">
+            <label for="name">
+              Your name:
+            </label>
+            <input type="text" name="name" required id="name-field">
+          </div>
+          <div class="input-group">
+            <label for="rating">Your rating:</label>
+            <select name="rating" id="rating-select" required>
+              <option value=""></option>
+              <option value="1">1</option>
+              <option value="2">2</option>
+              <option value="3">3</option>
+              <option value="4">4</option>
+              <option value="5">5</option>
+            </select>
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="input-group">
+            <label for="review-text">Your review:</label>
+            <textarea name="review-text" id="review-text" required></textarea>
+          </div>
+        </div>
+
+        <div class="input-group submit">
+          <button type="submit" id="form-submit">Submit</button>
+        </div>
+      </form>
+    </section>
     <!-- End reviews -->
   </main>
   <!-- End main -->
 
+
   <!-- Beginning footer -->
   <footer id="footer">
-    Copyright (c) 2017 <a href="/"><strong>Restaurant Reviews</strong></a> All Rights Reserved.
+    Copyright (c) 2017
+    <a href="/">
+      <strong>Restaurant Reviews</strong>
+    </a> All Rights Reserved.
   </footer>
   <!-- End footer -->
 
   <!-- Beginning scripts -->
   <!-- Database helpers -->
   <script type="text/javascript" src="js/dbhelper.js"></script>
+
+  <script type="text/javascript" src="js/form.js"></script>
+
   <!-- Main javascript file -->
   <script type="text/javascript" src="js/restaurant_info.js"></script>
   <!-- Google Maps -->
   <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDRbr6-nwHrQTgfe-6AEHypQ8phwAHBbAk&libraries=places&callback=initMap"></script>
   <!-- End scripts -->
+
+
+  <script>
+    if ('serviceWorker' in navigator) {
+      window.addEventListener('load', function () {
+        navigator.serviceWorker.register('/sw.js');
+      });
+    }
+  </script>
 
 </body>
 
